After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752322 - JNI: jaw_value_get_increment doesn't call any AtkValue method
JNI: jaw_value_get_increment doesn't call any AtkValue method
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-13 11:55 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-13 23:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
JNI: call AtkValue getIncrement java method (1.60 KB, patch)
2015-07-13 23:20 UTC, Magdalen Berns (irc magpie)
committed Details | Review
HACKING: remove AtkValue recommendations (2.03 KB, patch)
2015-07-13 23:41 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-13 11:55:49 UTC
jaw_value_get_increment doesn't call any method in java, it just calls atk_value_get_increment which is not useful.

What it should do is call a java method to get the minimum increment by which the value of an object can be changed. It returns zero the gdouble is undefined.[1]

Unfortunately, there is no obvious method to make useful in the AccessibleValue class, so the necessary logic will have to be written into the relevant AtkValue class function.[2] The java method (e.g. getIncrement) should ultimately return a double value and the jaw_value_get_increment function which calls it, returns a gdouble. 

[1] https://git.gnome.org/browse/atk/tree/atk/atkvalue.h#n115
[2] http://docs.oracle.com/javase/8/docs/api/javax/accessibility/AccessibleValue.html
Comment 1 Magdalen Berns (irc magpie) 2015-07-13 23:20:07 UTC
Created attachment 307370 [details] [review]
JNI: call AtkValue getIncrement java method
Comment 2 Magdalen Berns (irc magpie) 2015-07-13 23:41:31 UTC
Created attachment 307371 [details] [review]
HACKING: remove AtkValue recommendations