JNI: call AtkValue getIncrement java method

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=752322